...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        setupUI();
        
        navigationTitle.title = "CARE"
        
        
        //step count chart
        let group = DispatchGroup()
        group.enter()
        store.retrieveStepCount() { steps in
...
